@@ -1,0 +1,48 @@
+## SECTION=multimedia_gtk
+
+menuconfig GLIB
+	tristate
+	prompt "glib                          "
+	select LIBC_DL
+	select LIBC_RT
+	select LIBC_RESOLV
+	select LIBC_PTHREAD
+	select GCCLIBS_GCC_S
+	select GETTEXT		if GLIB_GETTEXT_GETTEXT
+	select GETTEXT_DUMMY	if GLIB_GETTEXT_DUMMY
+	select HOST_GLIB
+	select HOST_GTK_DOC
+	select ICONV
+	select ZLIB
+	help
+	  GLib is a library containing many useful C routines for things
+	  such as trees, hashes, lists, and strings. It is a useful
+	  general-purpose C library used by projects such as GTK+, GIMP,
+	  and GNOME.
+
+if GLIB
+
+#config GLIB_EXPERIMENTAL
+#	bool
+#	prompt "experimental version"
+
+choice
+
+	prompt "gettext variant"
+	default GLIB_GETTEXT_NONE
+
+	config GLIB_GETTEXT_NONE
+		bool
+		prompt "not needed    "
+
+	config GLIB_GETTEXT_GETTEXT
+		bool
+		prompt "gnu (gettext) "
+
+	config GLIB_GETTEXT_DUMMY
+		bool
+		prompt "dummy         "
+
+endchoice
+
+endif
