@@ -1,3 +1,7 @@
+2012-03-16	Stephan Linz <linz@li-pro.net>
+
+	* common: stay on glib-2.28.8 (from ptxdist-2011.12.0)
+
 2012-03-14	Stephan Linz <linz@li-pro.net>
 
 	* common: HOWTO: add description for Xilinx-ML605-AXI-full-13.2
